Fix overflow on sidebar

--- a/client/src/components/desktop/SidebarContainer/SidebarContainer.scss
+++ b/client/src/components/desktop/SidebarContainer/SidebarContainer.scss
@@ -22,6 +22,8 @@
   display: flex;
   margin: 0.25rem;
   padding: 0.25rem 0;
+  min-height: 100px;
+  overflow-x: scroll;
 }
 
 .TraffickingScore {
@@ -136,7 +138,7 @@
     width: 25%;
     margin-bottom: -0.75rem;
     padding: 0.5rem 1rem;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     position: relative;
     border-radius: 0;
 
